--- a/development.mdx
+++ b/development.mdx
@@ -24,7 +24,7 @@ yarn global add mintlify
 
 </CodeGroup>
 
-**Step 2**: Navigate to the docs directory (where the `docs.json` file is located) and execute the following command:
+**Step 2**: Navigate to the docs directory (where the `docs.json` file is found) and execute the following command:
 
 ```bash
 mintlify dev
