feat: added skeleton structure

--- a/lora-training/uploading-data.mdx
+++ b/lora-training/uploading-data.mdx
@@ -93,6 +93,10 @@ This page shows:
 <Note>
 Processing longer videos may take more time. The progress tracker will keep you informed of the current status.
 </Note>
+<Warning>
+If you don't refresh the page after a job is complete, you may not see all the training data.
+</Warning>
+
 
 ## Editing Captions
 
@@ -126,7 +130,7 @@ Once you're satisfied with the captions, select the data you want to use for tra
 Options:
 - Click individual images/videos to select them
 - Use the "Select All" button to include everything
-- **After making your selection, scroll back to the top of the page and click the "Configure Training" button**
+- After making your selection, scroll back to the top of the page and click the "Configure Training" button
 
 ## Next Steps
 
