--- a/lora-training/testing-lora.mdx
+++ b/lora-training/testing-lora.mdx
@@ -11,7 +11,6 @@ description: "How to test and evaluate your trained LoRA models"
   className="w-full aspect-video"
   src="https://storage.googleapis.com/remade-v2/website/Explainer%20Video%20%233%20V2.mp4"
 ></video>
-# Testing Your LoRA
 
 After your LoRA training job completes, you'll want to test the results to evaluate performance and select the best epoch. This section guides you through the testing process.
 
@@ -19,71 +18,64 @@ After your LoRA training job completes, you'll want to test the results to evalu
 
 Navigate to the Training Jobs section using the top navigation bar.
 
-<Frame caption="">
-  <img src="/images/lora/training-jobs-nav.png" alt="Training jobs navigation" />
+<Frame caption="Training jobs navigation">
+  <img src="/images/lora/test/training-jobs-nav.png" alt="Training jobs navigation" />
 </Frame>
-
-## Viewing Training Jobs
-
-In the Training Jobs section, you'll see a list of all your training jobs:
-
-<Frame>
-  <img src="/images/lora/training-jobs-list.png" alt="Training jobs list" />
-</Frame>
-
-Currently, there is no real-time training progress indicator, but epochs are saved and displayed as soon as they complete. You can expand a job to see if any epochs are available while the job is still training.
 
 ## Completed Training Jobs
 
 When a job is complete, you'll be able to:
 
-<Frame>
-  <img src="/images/lora/completed-job.png" alt="Completed training job" />
-</Frame>
-
 - Download individual epochs
 - View the training configuration
-- Access the training data
-- Resume training from a specific checkpoint
+- Download the training data with captions
+- Resume training from the latest checkpoint
 - Test the best epochs
+
+<Frame caption="Completed training job">
+  <img src="/images/lora/test/complete-job.png" alt="Completed training job" />
+</Frame>
+
+
 
 ## Testing Epochs
 
-To test your trained LoRA, click the "Test Best Epoch" button. This will open a testing configuration modal:
+To test your trained LoRA, click the "Test Best Epoch" button. This will open testing page for your LoRA:
 
 <Frame>
-  <img src="/images/lora/test-modal.png" alt="Test modal" />
+  <img src="/images/lora/test/testing-page.png" alt="Test modal" />
+</Frame>
+
+Click the "Create Test Generation" button to create a test generation for your LoRA, a modal will open to configure your test:
+
+<Frame>
+  <img src="/images/lora/test/testing-modal.png" alt="Test modal" />
 </Frame>
 
 In this modal, you can:
 - Select which epochs you'd like to test
 - Enter prompts to use for testing
 - Adjust inference parameters
+- Automatically generate test prompts
 
 ## Configuring Your Test
 
 Complete the testing modal with your preferred settings:
 
 <Frame>
-  <img src="/images/lora/test-modal-filled.png" alt="Completed test modal" />
+  <img src="/images/lora/test/testing-completed-modal.png" alt="Completed test modal" />
 </Frame>
 
 When you're ready, click the "Submit Test Request" button to launch the test.
 
 ## Viewing Test Results
 
-After submitting your test request, navigate to the Testing tab to view your testing jobs:
-
-<Frame>
-  <img src="/images/lora/testing-tab.png" alt="Testing tab" />
-</Frame>
-
-## Evaluating Results
+After submitting your test request, you can view your testing jobs:
 
 Review the results of your testing job to determine which epoch performs best for your use case:
 
 <Frame>
-  <img src="/images/lora/test-results.png" alt="Test results" />
+  <img src="/images/lora/test/testing-view-results.png" alt="Test results" />
 </Frame>
 
 Compare the outputs from different epochs with various prompts to identify which one best captures your intended concept.
@@ -92,8 +84,8 @@ Compare the outputs from different epochs with various prompts to identify which
 
 After identifying the best epoch, you can:
 1. Download the model for use in your projects
-2. Share your LoRA with the community
-3. Continue iterating on your training process with new data or parameters
+2. Share your LoRA on platforms like CivitAI/TensorArt
+3. Let us know and we'll add it to Discord!
 
 <Tip>
 When sharing your LoRA on platforms like Civitai, please tag Remade and include a link to our Discord. We'd love to see what you've created!
