--- a/canvas/introduction.mdx
+++ b/canvas/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: LoRA Trainer Introduction
+title: Introduction
 description: "Learn how to train LoRA models on the Remade platform"
 ---
 
