docs: expand image editing and generation documentation with detailed instructions and tips

--- a/canvas/ask-mode.mdx
+++ b/canvas/ask-mode.mdx
@@ -1,4 +1,4 @@
 ---
 title: Ask Mode
-description: "Learn how to train LoRA models on the Remade platform"
+description: "Learn how to use Ask mode for ideation, project planning and prompt generation"
 ---
