--- a/canvas/image-editing.mdx
+++ b/canvas/image-editing.mdx
@@ -1,4 +1,95 @@
 ---
-title: Image Editing
-description: "Learn how to train LoRA models on the Remade platform"
+title: "Image Editing"
+description: "Learn how to edit, enhance, and modify images using Remade Canvas's powerful editing tools"
 ---
+
+## Edit
+
+Use natural language to edit any aspect of the image using the prompt box below the image. This powerful feature lets you make complex edits by simply describing what you want to change.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/flux_kontext_edit.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+<Tip>
+  **Pro tip:** Click the image icon next to the prompt box to add reference
+  images that guide your edits. Reference images help the AI better understand
+  your desired changes and produce more accurate results. Ideal for adding
+  products or characters on a scene.
+</Tip>
+## Inpainting
+
+Precisely edit specific areas of your image by painting over the regions you want to modify, then describe the changes you want to make.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/inpainting.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+Perfect for removing unwanted objects, changing specific elements, or adding new details to targeted areas of your image.
+
+## Outpainting (Resizing)
+
+Expand your image beyond its original boundaries using outpainting. You can optionally add a prompt to guide how the AI fills the new areas.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/expand.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+Great for creating adjusting the aspect ratio of your images for different platforms while maintaining visual continuity.
+
+## Upscale
+
+Increase the resolution and quality of your images using AI-powered upscaling technology.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/upscale.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+<Tip>
+  **Pro tip:** Clicking "Advanced Settings" allows you to adjust the creativity
+  and resemblance levels, giving you fine control over how the AI enhances your
+  image.
+</Tip>
+
+## Remove Background
+
+Simple and effective background removal operation that automatically detects and removes the background from your images. Perfect for creating clean product shots, isolating subjects, or preparing images for gen frames.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/remove_bg.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
