--- a/canvas/image-generation.mdx
+++ b/canvas/image-generation.mdx
@@ -1,4 +1,96 @@
 ---
-title: Image Generation
-description: "Learn how to train LoRA models on the Remade platform"
+title: "Image Generation"
+description: "Learn how to Generate stunning images using Remade Canvas's powerful AI models and advanced features.
+"
 ---
+
+## Generating Text to Image
+
+To generate an image from a text prompt:
+
+1. **Access the generation toolbar** - Click on the generation icon (stars icon) in the left toolbar to make the generation toolbar appear
+2. **Write your prompt** - Enter a descriptive text prompt in the input field
+3. **Enhance your prompt (optional)** - Click the "Enhance" button to automatically improve your prompt with more detail and creative elements
+4. **Customize settings**:
+   - Select the **number of images** to generate (1-4 images)
+   - Choose your preferred **aspect ratio** from the available options
+5. **Generate** - Click the generate button to create your images
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/text-to-image.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+## Selecting an Image Model
+
+Choose from multiple AI models, each optimized for different styles and purposes:
+
+| Model            | Best For                      | Strengths                                       |
+| ---------------- | ----------------------------- | ----------------------------------------------- |
+| **Runway Gen 4** | Photorealistic images         | High-quality realistic photos, natural lighting |
+| **Recraft V3**   | Artistic and stylized content | Creative interpretations, artistic styles       |
+| **Flux Kontext** | Consistent Characters         | High prompt adherence,                          |
+| **GPT Image**    | General purpose               | Balanced results, good prompt adherence         |
+| **Flux**         | Versatile generations         | Wide range of styles, reliable output           |
+| **Imagen 4**     | High-resolution images        | Sharp detail, excellent text rendering          |
+| **Ideogram**     | Text-heavy designs            | Perfect for images with text elements           |
+
+<Tip>
+  Try different models with the same prompt to see which style works best for
+  your project. Some models support additional features like reference images.
+</Tip>
+
+## Adding Images as Reference
+
+Reference images help guide your AI generation by providing visual context and style direction.
+
+### How to Add References
+
+1. **Select an existing image** - Click on any image in your canvas
+2. **Set as reference** - Click the "Reference" button that appears
+3. **Generate with reference** - Write your prompt and generate as normal
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/references.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+    alt="Demonstrating how to add and use image references"
+  />
+</Frame>
+<Note>
+  Not all models support reference images. Check the model capabilities when
+  selecting your AI model for generation.
+</Note>
+
+### Using References Effectively
+
+When using reference images, you can:
+
+- **Mention specific elements** - Reference particular aspects like "use the lighting from the reference image" or "apply the color palette from the reference"
+- **Style transfer** - Ask the AI to generate in the same artistic style as your reference
+- **Composition guidance** - Use reference images to guide the overall layout and composition
+- **Color schemes** - Extract and apply color palettes from reference images
+
+### Reference Best Practices
+
+- **High-quality references** - Use clear, high-resolution reference images for best results
+- **Relevant content** - Choose references that relate to your desired output
+- **Specific instructions** - Be explicit about which aspects of the reference you want to incorporate
+- **Combine multiple references** - You can use multiple reference images to combine different elements
+
+## Tips for Better Results
+
+- **Be descriptive** - Include details about style, mood, lighting, and composition
+- **Use the enhance feature** - Let AI improve your prompts for more creative results
+- **Experiment with models** - Different models excel at different types of content
+- **Iterate and refine** - Generate multiple variations and build on the best results
