--- a/canvas/sharing-canvases.mdx
+++ b/canvas/sharing-canvases.mdx
@@ -1,4 +1,26 @@
 ---
 title: Sharing Canvases
-description: "Learn how to share your canvases with colleauges"
+description: "Collaborate with your team by sharing your canvases and allowing others to view or copy your work."
 ---
+
+## How to Share a Canvas
+
+To share a canvas with others, click the share button in the top right corner of the canvas, switch your canvas visibility to public, copy the generated shareable link, and send the link to anyone you want to give access to.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/sharing_canvases.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+<Note>
+  **Important:** When you receive a canvas, click "Make a Copy" in the top right
+  corner to add this canvas to your workspace and be able to edit and generate
+  new content. Without making a copy, you can only view the shared canvas but
+  cannot make modifications.
+</Note>
