docs: remove outdated video operations documentation and enhance Ask Mode and video generation sections with detailed instructions and examples

--- a/canvas/ask-mode.mdx
+++ b/canvas/ask-mode.mdx
@@ -1,4 +1,45 @@
 ---
 title: Ask Mode
-description: "Learn how to use Ask mode for ideation, project planning and prompt generation"
+description: "Learn how to use Ask mode for ideation, project planning, and prompt generation"
 ---
+
+Ask Mode allows you to interact with the canvas as if you're having a conversation with ChatGPT. It's a versatile tool for creating prompts, planning your work, or exploring ideas.
+
+## Using Ask Mode
+
+You can think of Ask Mode like having a ChatGPT conversation with the canvas. Use it to create prompts, plan your work, or anything else you can imagine.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/ask_mode.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+<Note>
+  Click on the latest response to ask a follow-up question. If you don't, it
+  will start a new conversation.
+</Note>
+
+## Extracting Prompts from Images & Videos
+
+Ask Mode can be used to extract a prompt from an image. This feature allows you to seamlessly integrate visual elements into your ideation process, or recreate images and videos you see online.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/ask_mode_Description.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+<Tip>
+  You can also extract prompts from videos by adding them as references, just
+  like with images.
+</Tip>
