--- a/canvas/image-generation.mdx
+++ b/canvas/image-generation.mdx
@@ -81,16 +81,19 @@ When using reference images, you can:
 - **Composition guidance** - Use reference images to guide the overall layout and composition
 - **Color schemes** - Extract and apply color palettes from reference images
 
-### Reference Best Practices
-
-- **High-quality references** - Use clear, high-resolution reference images for best results
-- **Relevant content** - Choose references that relate to your desired output
-- **Specific instructions** - Be explicit about which aspects of the reference you want to incorporate
-- **Combine multiple references** - You can use multiple reference images to combine different elements
-
 ## Tips for Better Results
 
 - **Be descriptive** - Include details about style, mood, lighting, and composition
 - **Use the enhance feature** - Let AI improve your prompts for more creative results
 - **Experiment with models** - Different models excel at different types of content
 - **Iterate and refine** - Generate multiple variations and build on the best results
+
+---
+
+## Next Steps
+
+<Card title="Image Editing" icon="paintbrush" href="/canvas/image-editing">
+  Learn how to edit, enhance, and modify your generated images with powerful
+  AI-powered editing tools including inpainting, outpainting, upscaling, and
+  more.
+</Card>
