--- a/canvas/sections.mdx
+++ b/canvas/sections.mdx
@@ -2,3 +2,31 @@
 title: Sections
 description: "Learn how to organise your canvas with sections"
 ---
+
+When you spend hours on a canvas, you should make sure it's beautiful and well organised. You can use sections to organise your content in separate parts of the canvas.
+
+<Frame>
+  <img
+    src="/images/sections_image.png"
+    alt="Canvas sections organization example"
+  />
+</Frame>
+
+## Creating a Section
+
+To create a new section on your canvas:
+
+1. **Access the sections tool** - Click on the sections icon in the side toolbar
+2. **Draw the section area** - Click and drag to draw the area where you want the section to be added
+3. **Organize your content** - Add and remove items to the section by placing them inside it or moving them outside
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/Sections.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
