--- a/canvas/navigation-basics.mdx
+++ b/canvas/navigation-basics.mdx
@@ -18,3 +18,14 @@ To move across the canvas, known as panning:
 - If you're using a mouse, the easiest way is to use **middle click** (press down the scroll wheel) and drag.
 - Hold <kbd>Space</kbd> to temporarily activate the hand tool, then click, hold, and drag. While holding <kbd>Space</kbd>, your cursor will switch from select mode to pan mode as indicated by the hand cursor.
 - Select the hand tool at the top of the canvas. Then click, hold, and drag.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/panning.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
