docs: enhance Gen Frames and Remade Effects documentation with detailed usage instructions and benefits

--- a/canvas/gen-frames.mdx
+++ b/canvas/gen-frames.mdx
@@ -1,4 +1,45 @@
 ---
 title: Gen Frames
-description: "Learn how to train LoRA models on the Remade platform"
+description: "Learn how to use Gen Frames for precise composition control and multi-component image generation"
 ---
+
+Gen Frames are composition boards on the canvas that provide fine control over your output. They're especially useful for producing images that consist of multiple fixed components, allowing you to precisely define different areas of your composition.
+
+## Using Gen Frames
+
+To create a composition using Gen Frames:
+
+1. **Create a Gen Frame** - Select the Gen Frames icon from the side toolbar, choose your desired aspect ratio, and draw the frame on your canvas
+
+2. **Add a base foundation** - Add a base image or write a comment that describes the main visual theme or dominant element of your composition
+
+3. **Annotate specific areas** - Select the areas you want to edit by clicking on the frame and then clicking "Annotate". A comment section will pop up where you can:
+
+   - Write the description for what you want in that area
+   - Optionally provide a visual reference image
+
+4. **Generate your composition** - Once all comments are added, provide a general description of the overall task, select the number of output images, and click generate
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/gen_frames.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+## Benefits of Gen Frames
+
+- **Precise control** - Define exactly what goes where in your composition
+- **Multi-component designs** - Perfect for complex images with multiple distinct elements
+- **Visual references** - Add reference images for specific areas to guide the AI
+- **Consistent layouts** - Maintain consistent positioning across multiple generations
+
+<Tip>
+  Use Gen Frames when you need precise control over where specific elements
+  appear in your image, such as product mockups, character positioning, or
+  complex scene compositions.
+</Tip>
