--- a/canvas/remade-effects.mdx
+++ b/canvas/remade-effects.mdx
@@ -1,6 +1,49 @@
 ---
 title: Remade Effects
-description: "Learn how to train LoRA models on the Remade platform"
+description: "Learn how to use Remade Effects for precise camera and scene control in your videos"
 ---
 
-Welcdome to the Remade LoRA Trainer! This guide will walk you through the process of training LoRA (Low-Rank Adaptation) models on our platform. LoRA is a technique that allows you to efficiently fine-tune large video models for specific effects/styles/characters etc.
+Remade Effects are a set of LoRAs that allow you to have precise camera and scene control in your video generations. With over 60+ effects available, you can achieve professional-grade cinematography and visual effects.
+
+## Applying Remade Effects
+
+To use Remade Effects in your video generation:
+
+1. **Select video generation** - Click on the generation icon and switch to the "Video" tab.
+2. **Select a start frame** - Choose an image to use as your starting frame for the video.
+3. **Access Remade Effects** - Click on "Remade Effects" in the model selector.
+4. **Browse effects** - Explore the 60+ available effects to find the perfect one for your project.
+5. **Select and generate** - Choose your desired effect and click generate to create your video.
+
+<Frame>
+  <video
+    src="https://storage.googleapis.com/remade-v2/website/remade_effects.mp4"
+    autoPlay
+    loop
+    muted
+    playsInline
+    style={{ width: "100%", height: "auto" }}
+  />
+</Frame>
+
+<Warning>
+  **Important:** Depending on whether you have added a start frame or not,
+  different effects are available to view and select. Make sure you decide
+  whether you're going for text-to-video or image-to-video prior to viewing the
+  effects.
+</Warning>
+
+## Types of Effects Available
+
+Remade Effects include various categories of camera movements and scene controls:
+
+- **Camera movements** - Dolly shots, pans, tilts, and complex camera trajectories.
+- **Scene transitions** - Arc right, arc left, smooth transitions between different scenes or perspectives.
+- **Visual effects** - Explosions, disintegration effect, dynamic lighting changes, atmospheric effects, and cinematic styles.
+- **Camera types** - Fisheye, ultra wide, and precise control over different lens perspectives.
+- **Motion control** - Precise control over object and character movements.
+
+<Tip>
+  Preview different effects to see which one best matches your creative vision
+  before generating your final video.
+</Tip>
